# Ffmpegguide

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/norman/ffmpegguide/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/norman/ffmpegguide/: HomeActivity.java  MainActivity.kt  NativeUtil.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/norman/ffmpegguide/: ExampleUnitTest.kt
extension/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
media_arm/: build.gradle
media_arm/cpp-src/: com_norman_ffmpegguide_NativeUtil.h  hello-jni.c
media_arm/src/androidTest/java/com/norman/media_arm/: ExampleInstrumentedTest.java
media_arm/src/main/: AndroidManifest.xml
media_arm/src/main/cpp/: CMakeLists.txt
media_arm/src/main/java/com/norman/media_arm/: MainActivity.java
media_arm/src/main/res/values/: strings.xml
media_arm/src/test/java/com/norman/media_arm/: ExampleUnitTest.java
